# Student domain layer - contains the Student aggregate and its value objects.
#
# This package has TWO library targets:
#   :id     -> Only StudentId (the identity value object, no dependencies)
#   :domain -> Student + StudentName + Email (depends on :id)
#
# WHY two targets? So that other deployables (grading, booking) can depend on
# just the identity (:id) without pulling in the full student domain.
# Example: grading needs StudentId to record grades, but does NOT need Student or StudentName.

load("@rules_java//java:defs.bzl", "java_library", "java_test")

# Identity-only target: just the StudentId value object (UUID-based identifier).
# This has ZERO dependencies, making it safe for any module to depend on.
java_library(
    name = "id",
    srcs = ["com/masorange/registry/domain/student/StudentId.java"],
    visibility = ["//visibility:public"],
)

# Full student domain: the Student aggregate and StudentName value object.
# Depends on :id because Student contains a StudentId field.
java_library(
    name = "domain",
    srcs = [
        "com/masorange/registry/domain/student/Student.java",
        "com/masorange/registry/domain/student/StudentName.java",
        "com/masorange/registry/domain/student/Email.java", # <-- ¡AQUÍ ESTÁ NUESTRO NUEVO INVITADO!
    ],
    visibility = ["//visibility:public"],
    deps = [":id"],
)

# -- Tests --
# Each test target compiles and runs a single test class.
# size = "small" tells Bazel this test should finish quickly (< 1 minute).

java_test(
    name = "StudentIdTest",
    srcs = ["com/masorange/registry/domain/student/StudentIdTest.java"],
    test_class = "com.masorange.registry.domain.student.StudentIdTest",
    size = "small",
    deps = [
        ":id",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "StudentNameTest",
    srcs = ["com/masorange/registry/domain/student/StudentNameTest.java"],
    test_class = "com.masorange.registry.domain.student.StudentNameTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "StudentTest",
    srcs = ["com/masorange/registry/domain/student/StudentTest.java"],
    test_class = "com.masorange.registry.domain.student.StudentTest",
    size = "small",
    deps = [
        ":domain",
        ":id",
        "//jvm-deps:junit",
    ],
)