# Teacher domain layer - contains the Teacher aggregate, TeachingAssignment, and value objects.
#
# Same pattern as student: two library targets (:id and :domain).
#   :id     -> Only TeacherId (identity, no dependencies)
#   :domain -> Teacher, TeacherName, SubjectName, TeachingAssignment (depends on :id)
#
# TeachingAssignment models which subject a teacher is assigned to teach.
# SubjectName is a value object that wraps the raw subject string with validation.

load("@rules_java//java:defs.bzl", "java_library", "java_test")

# Identity-only target: just TeacherId. No dependencies.
java_library(
    name = "id",
    srcs = ["com/masorange/registry/domain/teacher/TeacherId.java"],
    visibility = ["//visibility:public"],
)

# Full teacher domain: Teacher aggregate + related value objects.
java_library(
    name = "domain",
    srcs = [
        "com/masorange/registry/domain/teacher/SubjectName.java",
        "com/masorange/registry/domain/teacher/Teacher.java",
        "com/masorange/registry/domain/teacher/TeacherName.java",
        "com/masorange/registry/domain/teacher/TeachingAssignment.java",
    ],
    visibility = ["//visibility:public"],
    deps = [":id"],
)

# -- Tests --

java_test(
    name = "TeacherIdTest",
    srcs = ["com/masorange/registry/domain/teacher/TeacherIdTest.java"],
    test_class = "com.masorange.registry.domain.teacher.TeacherIdTest",
    size = "small",
    deps = [
        ":id",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "TeacherNameTest",
    srcs = ["com/masorange/registry/domain/teacher/TeacherNameTest.java"],
    test_class = "com.masorange.registry.domain.teacher.TeacherNameTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "TeacherTest",
    srcs = ["com/masorange/registry/domain/teacher/TeacherTest.java"],
    test_class = "com.masorange.registry.domain.teacher.TeacherTest",
    size = "small",
    deps = [
        ":domain",
        ":id",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "SubjectNameTest",
    srcs = ["com/masorange/registry/domain/teacher/SubjectNameTest.java"],
    test_class = "com.masorange.registry.domain.teacher.SubjectNameTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "TeachingAssignmentTest",
    srcs = ["com/masorange/registry/domain/teacher/TeachingAssignmentTest.java"],
    test_class = "com.masorange.registry.domain.teacher.TeachingAssignmentTest",
    size = "small",
    deps = [
        ":domain",
        ":id",
        "//jvm-deps:junit",
    ],
)
