# ClassGroup infrastructure layer - concrete implementation of ClassGroupRepository.
#
# Contains InMemoryClassGroupRepository: HashMap-based implementation.

load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "infrastructure",
    srcs = glob(["com/masorange/registry/infrastructure/classgroup/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/registry/application/classgroup:application",  # Implements ClassGroupRepository
        "//pkg/registry/domain/classgroup:domain",            # Uses ClassGroup, ClassGroupId
    ],
)
