load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "infrastructure",
    srcs = glob(["com/masorange/registry/infrastructure/teacher/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/registry/application/teacher:application",
        "//pkg/registry/domain/teacher:domain",
        "//pkg/registry/domain/teacher:id",
    ],
)
