# Teacher infrastructure layer - concrete implementations of repository interfaces.
#
# Contains:
#   - InMemoryTeacherRepository: HashMap-based implementation of TeacherRepository
#   - InMemoryTeachingAssignmentRepository: ArrayList-based implementation of TeachingAssignmentRepository

load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "infrastructure",
    srcs = glob(["com/masorange/registry/infrastructure/teacher/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/registry/application/teacher:application",  # Implements TeacherRepository and TeachingAssignmentRepository
        "//pkg/registry/domain/teacher:domain",            # Uses Teacher, TeachingAssignment
        "//pkg/registry/domain/teacher:id",                # Uses TeacherId
    ],
)
